@@ -61,6 +61,9 @@ logout_short_title=Log Out
 quote_report_description=Report Quote
 quote_rating_up_description=Quote Rating Up
 quote_rating_down_description=Quote Rating Down
+quote_report_confirmation_request=Are you sure you would like to report the following quote?
+quote_rating_up_confirmation_request=Are you sure you would like to increase the rating of the following quote?
+quote_rating_down_confirmation_request=Are you sure you would like to decrease the rating of the following quote?
 quote_rating_description=Quote Rating
 quote_vote_count_description=Quote Vote Count
 quote_date_description=Quote Submission Date
@@ -205,6 +208,8 @@ username=Username
 event=Event
 guest=Guest
 empty=Empty
+ok=OK
+cancel=Cancel
 sunday=Sunday
 monday=Monday
 tuesday=Tuesday
