@@ -53,6 +53,9 @@ administration_short_title=Admin
 quote_report_description=Quote rapporteren
 quote_rating_up_description=Score van quote verhogen
 quote_rating_down_description=Score van quote verlagen
+quote_report_confirmation_request=Weet je zeker dat je volgende quote wilt rapporteren?
+quote_rating_up_confirmation_request=Weet je zeker dat je de rating van volgende quote wilt verhogen?
+quote_rating_down_confirmation_request=Weet je zeker dat je de rating van volgende quote wilt verlagen?
 quote_rating_description=Score van quote
 quote_vote_count_description=Aantal stemmen voor quote
 quote_date_description=Datum toevoeging quote
@@ -205,6 +208,8 @@ username=Gebruikersnaam
 event=Gebeurtenis
 guest=Gast
 empty=Leeg
+ok=OK
+cancel=Annuleren
 sunday=zondag
 monday=maandag
 tuesday=dinsdag
